# python-example

./: new.sh
.github/actions/pr-title-check/: action.yml  check_title.py
.github/workflows/: deploy.yaml  pr-title-check-action.yml  pr-title-check.yml  reusable-pr-title-check.yml
.template/: pyproject.toml
cloudformation/: .gitignore  Makefile  README.md  api.openapi.yaml  pyproject.toml  template.yaml
cloudformation/.github/workflows/: deploy.yaml
cloudformation/docs/: cloudformation.md
cloudformation/src/lambda/example/: lambda_function.py
playwright-mock/: Makefile  open_chrome.py  pyproject.toml  test_mock.py
polling/: .tool-versions  Makefile  README.md  conftest.py  pyproject.toml  test_polling.py
polling/fixtures/: intermittent.html  timeout-3s-intermittent.html  timeout-3s.html  timeout-7s.html  timeout-random.html  timeout.html
pydantic/: .envrc  Makefile  README.md  pyproject.toml  test_pydantic.py
pytest/: pyproject.toml
